--- a/css/base.css
+++ b/css/base.css
@@ -5,22 +5,24 @@
     padding: 0;
     box-sizing: border-box;
 }
-.contenedor {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
 
-.texto {
-    font-size: 16px;
-    line-height: 1.5;
-}
 body {
     font-family: Arial, sans-serif;
     color: #3B3634;
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
+    .contenedor {
+        max-width: 800px; 
+        float: left;      
+        margin-right: 20px; 
+        padding: 20px;    
+    }
+    
+    .texto {
+        font-size: 16px;  
+        line-height: 1.5; 
+    }
     }
 
     header,
