--- a/css/base.css
+++ b/css/base.css
@@ -27,8 +27,8 @@ body {
 
     header,
     footer {
-            background-color: #007bff;
-            color: white;
+            background-color: #a83131;
+            color: rgb(255, 255, 255);
             padding: 20px;
             display: grid;
             grid-template-columns: 1fr 2fr 2fr;
@@ -37,7 +37,7 @@ body {
 
     header div,
     footer div {
-            background-color: #0056b3;
+            background-color: #a83131;
             padding: 10px;
             text-align: center;
         }
@@ -50,7 +50,7 @@ body {
         }
 
     .grid-item {
-            background-color: white;
+            background-color: rgb(29, 29, 29);
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
@@ -60,7 +60,7 @@ body {
             text-align: center;
             margin-bottom: 30px;
             padding: 20px 40px;
-            background-color: #B5A79F;
+            background-color: #2b2b2b;
             /* Mid-tone background for header */
     }
 
@@ -68,11 +68,11 @@ body {
         h2,
         h3,
         h4 {
-            color: #3B3634;
+            color: #424242;
         }
 
         a {
-            color: #3F3F3F;
+            color: #424242;
         }
 
         article {
@@ -87,7 +87,7 @@ body {
         }
 
         blockquote {
-            background-color: #f9f9f9;
+            background-color: #ffffff;
             border-left: 10px solid #ccc;
             margin: 20px 0;
             padding: 10px 20px;
