--- a/css/index.css
+++ b/css/index.css
@@ -112,8 +112,9 @@ body {
 }
 
 .store-form input {
-    width: 100%; /* Ancho completo */
+    width: calc(100% - 20px); /* Ajusta ancho con margen incluido */
     margin-bottom: 15px; /* Espaciado inferior */
+    margin-right: 20px; /* Margen derecho adicional */
     padding: 10px; /* Espaciado interno */
     font-size: 1rem; /* Tamaño del texto */
     border: 1px solid #ccc; /* Borde gris */
