--- a/css/theme.css
+++ b/css/theme.css
@@ -1,9 +1,9 @@
 /* Importar tipografía local */
-@font-face {
-    font-family: 'RacingSansOne'; /* Nombre de la fuente local */
-    src: url('./assets/fonts/RacingSansOne-Regular.woff2') format('woff2'); /* Ruta al archivo de fuente local */
-    font-weight: normal; /* Peso normal */
-    font-style: normal; /* Estilo normal */
+ @font-face {
+    font-family: 'Racing Sans One';
+    src: url('assets\fonts\RacingSansOne-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /* Fuente remota desde Google Fonts */
